<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/relativelayout_rowcountry"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?rowBackgroundColor"
                android:gravity="center_vertical">

    <ImageView
        android:id="@+id/imageview_flag"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignTop="@+id/imageview_flag"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/textview_code"
        android:layout_toEndOf="@+id/imageview_flag"
        android:ellipsize="end"
        android:text="Country Sample"
        android:textAppearance="@style/CountryTextStyle"/>

    <TextView
        android:id="@+id/textview_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageview_flag"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="+123"
        android:textAppearance="@style/DialCodeTextStyle"
        android:textDirection="ltr"/>

</RelativeLayout>