<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchview_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_countries"
        android:layout_width="match_parent"
        android:background="?rowBackgroundColor"
        android:layout_height="match_parent"
        android:layout_below="@id/searchview_country"/>

</RelativeLayout>